# sundiald

./: .gitignore  Cargo.toml  README.md
examples/: maintenance.yaml  sundiald.yaml
src/: cli.rs  config.rs  main.rs  service.rs  state.rs
src/cli/: client.rs  render.rs  watch.rs
src/config/: duration.rs  schedule.rs  uuid_patch.rs
src/service/: alert.rs  api.rs  cleanup.rs  history.rs  orphan.rs  process.rs
tests/: daemon_lifecycle.rs
